# beartype-gradio

./: README.md  main.py  pyproject.toml
beartype_gradio/: gradio_ui.py
